--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
 <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+
 <header class="header">
 
     <div class="header-1">
@@ -15,7 +17,9 @@
             <div id="search-btn" class="fas fa-search"></div>
             <a href="wishlist" class="fas fa-heart"> </a>
             <a href="cart" class="fas fa-shopping-cart"> </a>
-            <a href="login" class="fas fa-user"></a>
+            <a *ngIf="!isLoggedIn"  href="login" class="fas fa-user"></a>
+            <a *ngIf="isLoggedIn" (click)="logout()" href="#"> Log out</a>
+            
         </nav>
 
 
