--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,21 @@
 <div class="login-form-container">
 
+    <a href= "#" id="close-login-btn" class="fas fa-times"></a>
 
-    <form action="">
+    <form  [formGroup]="loginForm" action="">
 
         <h3>sign in</h3>
 
-        <span>username</span>
-        <input type="email" name="" class= "box" placeholder="enter your email" id="">
+    <span>username</span>
+    <input formControlName="username" matInput type="text" class="box" placeholder="enter your email">
 
-        <span>password</span>
-        <input type="password" name="" class= "box" placeholder="enter your password" id="">
+    <span>password</span>
+    <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" class="box" placeholder="enter your password">
 
-        <div class="checkbox">
-            <input type="checkbox" name="" id="remember-me">
-            <label for="remember-me">remember me</label>
-
-        </div>
-        <input type="submit" value="sign in" class="btn">
+        <button  class="btn" (click)="loginWithEmailAndPassword()">Sing In</button>
+       
         <p>forger password ?<a href="#">click here</a> </p> 
         <p>don't have an account ?<a href="register" id="no-account-btn">create one</a></p>
 
     </form>
 </div>
-
