--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,13 @@
 <div class="register-form-container">
 
+    <a href="login" id="close-register-btn" class="fas fa-times"></a>
 
-    <form action=""  >
+    <form [formGroup]="registerForm" action=""  >
         <h3>register now</h3>
-        <input type = "text" name="name" class="box" placeholder="enter your name" required>
-        <input type = "text" name="email" class="box" placeholder="enter your email" required>
-        <input type = "password" name="password" class="box" placeholder="enter your password" required>
-        <input type = "password" name="confirmpassword" class="box" placeholder="confirm your password" required>
-        <input type = "submit" value="register" class="btn" name="submit">
+        <input formControlName="username" matInput type="text" class="box" placeholder="enter your email">
+        <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" class="box" placeholder="enter your password">
+        <input formControlName="confirmPassword" matInput [type]="hide ? 'password' : 'text'" class="box" placeholder="confirm your password">
+        <button class="btn" (click)="registerWithEmailAndPassword()" >Register</button>
     </form>
 
 
