updated category and products in update category/product components

--- a/src/app/update-category/update-category.component.html
+++ b/src/app/update-category/update-category.component.html
@@ -4,8 +4,8 @@
 
     <form [formGroup]="updateCategoryForm" (submit)="updateCategory()" >
       <h3>Update Category</h3>
-      <input formControlName="name" matInput type="text" class="box" placeholder="Category name">
-      <input type="file" formControlName="photo" (change)="onFileChange($event)" class="box" >
+      <input formControlName="name"  matInput type="text" class="box" >
+      <input type="file" formControlName="photo" (change)="onFileChange($event)" class="box">
       <button  type="submit" class="btn" >Update Category</button>
    </form>
    
