--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -8,8 +8,8 @@
         <div *ngFor="let category of categories" class="box">
           <h3>{{ category.name }}</h3>
           <img [src]="category.photo" alt="{{ category.name }}">
-          <a (click)="categoryName(category.name)" class="btn">Shop Now</a>
-          <a  *ngIf="isAdmin" class="btn1" (click)="prepareUpdate(category.name)">Update</a>
+          <a  class="btn">Shop Now</a>
+          <a  *ngIf="isAdmin" class="btn1" (click)="prepareUpdate(category.name, category.photo)">Update</a>
           <a  *ngIf="isAdmin" class="btn2" (click)="deleteCategory(category.name)">Delete</a>
         </div>
       </div>
