--- a/src/app/product-section/product-section.component.html
+++ b/src/app/product-section/product-section.component.html
@@ -26,7 +26,7 @@
             </div>
 
             <a href="#" class="btn">add to cart</a>
-            <a *ngIf="isAdmin" (click)="prepareUpdate(product.name)" class="btn1">update</a>
+            <a *ngIf="isAdmin" (click)="prepareUpdate(product.name, product.photo, product.price, product.category)" class="btn1">update</a>
             <a *ngIf="isAdmin" (click)="deleteProduct(product)" class="btn2">delete</a>
 
             
