--- a/src/app/update-product/update-product.component.html
+++ b/src/app/update-product/update-product.component.html
@@ -4,10 +4,10 @@
 
     <form [formGroup]="updateProductForm" (submit)="updateProduct()" >
       <h3>Update Product</h3>
-      <input formControlName="productname" matInput type="text" class="box" placeholder="Product name">
+      <input formControlName="productname" matInput type="text" class="box" >
       <input type="file" formControlName="productphoto" (change)="onFileChange($event)" class="box" >
-      <input formControlName="productprice" matInput type="text" class="box" placeholder="Product price">
-      <input formControlName="productcategory" matInput type="text" class="box" placeholder="Product category">
+      <input formControlName="productprice" matInput type="text" class="box" >
+      <input formControlName="productcategory" matInput type="text" class="box" >
       <button  type="submit" class="btn" >Update Product</button>
    </form>
    
