Login with google and contact page added

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,6 +13,8 @@
     <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" class="box" placeholder="enter your password">
 
         <button  class="btn" (click)="loginWithEmailAndPassword()">Sing In</button>
+
+        <button  class="btn" (click)="loginWithGoogle()">Sing In With GOOGLE</button>
        
         <p>forger password ?<a href="#">click here</a> </p> 
         <p>don't have an account ?<a href="register" id="no-account-btn">create one</a></p>
