--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,7 +33,7 @@
             <a href="#">home</a>
             <a href="category">category</a>
             <a href="products">products</a>
-            <a href="#contact">contact</a>
+            <a href="contact">contact</a>
 
         </nav>
 
